# steerkit

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
api/data/: index.html
api/generate/: index.html
api/intervention/: index.html
api/other/: index.html
api/probe/: index.html
api/viz/: index.html
cli/: index.html
concepts/: index.html
design/: index.html
docs/: cli.md  concepts.md  design.md  index.md  quickstart.md  workflow.md
docs/api/: data.md  generate.md  intervention.md  other.md  probe.md  viz.md
examples/: quickstart_composition.ipynb  quickstart_emotion.ipynb  quickstart_refusal.ipynb  walkthrough.ipynb
examples/case_studies/: encoder_walkthrough.ipynb  formality_walkthrough.ipynb  refusal_walkthrough.ipynb
examples/data/: emotion.group.json  formality.jsonl  refusal_pairs.jsonl  sentiment.jsonl  sycophancy.jsonl  verbosity.jsonl
quickstart/: index.html
scripts/: fit_formality_probe.py  fit_sentiment_probe_bert.py  fit_sycophancy_probe.py  generate_emotion_dataset.py  generate_refusal_dataset.py  generate_seed_datasets.py  generate_sentiment_dataset.py  generate_sycophancy_dataset.py  make_alpha_sweep_figure.py  make_cross_model_hero.py  make_mental_model_figure.py  make_ops_effect_figure.py  make_token_scores_figure.py
search/: search_index.json
steerkit/: __init__.py  cache.py  calibrate.py  cli.py  concepts.py  data.py  eval.py  extract.py  generate.py  gguf_export.py  intervention.py  lint.py  models.py  probe.py  report.py  sweep.py  teacher.py
steerkit/viz/: __init__.py  alpha_curve.py  cross_model.py  layer_selection.py  logit_lens.py  projection.py  similarity.py  token_scores.py
tests/: test_cache.py  test_cli.py  test_compose.py  test_concepts.py  test_data.py  test_eval.py  test_eval_metrics.py  test_extract.py  test_extract_batched.py  test_extract_pooling.py  test_generate.py  test_gguf_export.py  test_intervention.py  test_lint.py  test_multinomial.py  test_phase1_e2e.py  test_phase4_e2e.py  test_predict_at_mask.py  test_probe_fit.py  test_probe_io.py  test_report.py  test_score_tokens.py  test_smoke.py  test_sweep.py  test_teacher.py  test_viz.py  test_window.py
workflow/: index.html
